--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -406,7 +406,7 @@
   
   /* color sidebar */
   .chiller-theme .sidebar-wrapper {
-      background: #074973;
+      background: #005ea3;
   }
   
   .chiller-theme .sidebar-wrapper .sidebar-header,
@@ -465,7 +465,7 @@
   .chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown div,
   .chiller-theme .sidebar-wrapper .sidebar-search input.search-menu,
   .chiller-theme .sidebar-wrapper .sidebar-search .input-group-text {
-      background: #195982;
+      background: #1568a4de;
   }
   
   .chiller-theme .sidebar-wrapper .sidebar-menu .header-menu span {
@@ -473,7 +473,7 @@
   }
   
   .chiller-theme .sidebar-footer {
-      background: #074973;
+      background: #005ea3;
       box-shadow: 0px -1px 5px #053e61;
       border-top: 1px solid #053757;
   }
@@ -487,7 +487,7 @@
   }
   
   .sidebar_button{
-    background-color: #074973;
+    background-color: #005ea3;
     color: rgba(255, 255, 255, 0.884);
   }
 
